--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
-	<link rel="shortcut icon" href="./Assets/Icon.png" type="image/png">
+	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
      crossorigin="anonymous"></script>
 </head>
@@ -24,7 +24,7 @@
   gtag('config', 'G-5M4WSX0D7S');
 </script>
 <body>
-	<img id="bouncingIcon" src ="Page/Ship.png"></div>
+	<img id="bouncingIcon" src ="Assets/Ship.png"></div>
 	<script src="Page/script.js"></script>
 	<div id="home">
 		<h1><strong>Navigator</strong></h1>
