--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Simple and addictive arcade game">
 	<meta name="author" content="Mike Pistolesi">
 	<title>Navigator</title>
-	<link rel="stylesheet" href="Page/style.css">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
@@ -30,17 +30,17 @@
 		<h1><strong>Navigator</strong></h1>
 		<div id= "demoBox">
 			<video width = "200" height = "200" style="border: 1px solid black"controls autoplay loop muted>
-				<source src="Page/Demo.mp4" type="video/mp4">
+				<source src="Assets/Demo.mp4" type="video/mp4">
 			</video>
 		</div>
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<div id = "homeButtons">
-			<button id="latestReleasesButton" onclick="location.href='Page/downloads.html'">Latest Releases</button>
-			<button id="changesButton" onclick="location.href='Page/changes.html'">Changes</button>
-			<button id="roadmapButton" onclick="location.href='Page/roadmap.html'">Roadmap</button>
+			<button id="latestReleasesButton" onclick="location.href='downloads.html'">Latest Releases</button>
+			<button id="changesButton" onclick="location.href='changes.html'">Changes</button>
+			<button id="roadmapButton" onclick="location.href='roadmap.html'">Roadmap</button>
 			<button id="repositoryButton" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button id="contactButton" onclick="window.location.href='Page/contact.html'">Contact</button>
-			<button id="donateButton" onclick="location.href='Page/support.html'">Support the project</button>
+			<button id="contactButton" onclick="window.location.href='contact.html'">Contact</button>
+			<button id="donateButton" onclick="location.href='support.html'">Support the project</button>
 		</div>
 		<h3><strong>Created by Mike Pistolesi</strong></h2>
 	</div>
