--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </script>
 <body>
 	<img id="bouncingIcon" src ="Assets/Ship.png"></div>
-	<script src="Page/script.js"></script>
+	<script src="script.js"></script>
 	<div id="home">
 		<h1><strong>Navigator</strong></h1>
 		<div id= "demoBox">
