--- a/downloads.html
+++ b/downloads.html
@@ -2,6 +2,14 @@
 <!-- Navigator downloads page -->
 <html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M4WSX0D7S"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-5M4WSX0D7S');
+</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="author" content="Mike Pistolesi">
@@ -13,14 +21,6 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M4WSX0D7S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-5M4WSX0D7S');
-</script>
 <body>
 	<div id="downloads">
 		<h2>Latest Releases</h2>
@@ -61,7 +61,7 @@
 			</tbody>
 		</table>
 		<h4 style="margin-bottom:0px">To get started, download and extract the latest release above or run the game directly from the <a href="https://github.com/pstlo/Navigator/archive/refs/heads/main.zip">source code</a><h4>
-		<button id = "backButton" style = "z-index:2" onclick="location.href='../index.html'">Back</button>
+		<button id = "backButton" style = "z-index:2" onclick="location.href='index.html'">Back</button>
 	</div>
 </body>
 </html>
