--- a/roadmap.html
+++ b/roadmap.html
@@ -2,6 +2,12 @@
 <!-- Navigator Roadmap -->
 <html>
 <head>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-5M4WSX0D7S');
+</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="author" content="Mike Pistolesi">
@@ -13,12 +19,6 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-5M4WSX0D7S');
-</script>
 <body>
 	<h2>Roadmap</h2>
 	<div id="roadmap">
@@ -45,6 +45,6 @@
 		</div>
 		<p>Note: this is a slightly optimistic layout of my plans for the project. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
 	</div>
-	<button id = "backButton" style = "z-index:2" onclick="location.href='../index.html'">Back</button>
+	<button id = "backButton" style = "z-index:2" onclick="location.href='index.html'">Back</button>
 </body>
 </html>
