--- a/changes.html
+++ b/changes.html
@@ -21,7 +21,6 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
-
 <body>
 	<h2>Change Log</h2>
 		<div id = "changeLog">
@@ -239,6 +238,6 @@
 				</tbody>
 			</table>
 		</div>
-		<button id = "backButton" style = "z-index:2" onclick="location.href='index.html'">Back</button>
+		<button id = "backButton" style = "z-index:2" onclick="location.href='navigator.html'">Back</button>
 </body>
 </html>
