--- a/downloads.html
+++ b/downloads.html
@@ -61,7 +61,7 @@
 			</tbody>
 		</table>
 		<h4 style="margin-bottom:0px">To get started, download and extract the latest release above or run the game directly from the <a href="https://github.com/pstlo/Navigator/archive/refs/heads/main.zip">source code</a><h4>
-		<button id = "backButton" style = "z-index:2" onclick="location.href='index.html'">Back</button>
+		<button id = "backButton" style = "z-index:2" onclick="location.href='navigator.html'">Back</button>
 	</div>
 </body>
 </html>
