--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
 			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
 		</div>
 		<button id="donateButton" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
-		<button id="backButton" onclick="location.href='../index.html'">Back</button>
+		<button id="backButton" onclick="location.href='navigator.html'">Back</button>
 	</div>
 </body>
 </html>
