--- a/roadmap.html
+++ b/roadmap.html
@@ -45,6 +45,6 @@
 		</div>
 		<p>Note: this is a slightly optimistic layout of my plans for the project. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
 	</div>
-	<button id = "backButton" style = "z-index:2" onclick="location.href='index.html'">Back</button>
+	<button id = "backButton" style = "z-index:2" onclick="location.href='Navigator.html'">Back</button>
 </body>
 </html>
