--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		gtag('js', new Date());
 		gtag('config', 'G-5M4WSX0D7S');
 	</script>
-  <meta http-equiv="refresh" content="0; URL=./navigator.html">
+  	<meta http-equiv="refresh" content="0; URL=./navigator.html">
+	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
 </html>
