--- a/downloads.html
+++ b/downloads.html
@@ -20,6 +20,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
+		crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id="downloads">
