--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		gtag('js', new Date());
 		gtag('config', 'G-5M4WSX0D7S');
 	</script>
-  	<meta http-equiv="refresh" content="0; URL=./navigator.html">
-	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
+		crossorigin="anonymous"></script>
+	<meta http-equiv="refresh" content="0; URL=./navigator.html">
 </head>
 </html>
