--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
 		crossorigin="anonymous"></script>
-	<meta http-equiv="refresh" content="0; URL=./navigator.html">
+	<meta http-equiv="refresh" content="0; URL=./navigator/home.html">
 </head>
 </html>
