--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -37,6 +37,7 @@
 					<tr>
 						<td style="text-align: center;">v0.4.8</td>
 						<td>
+							<li>Added controller support</li>
 							<li>Added brakes and rotation in place</li>
 							<li>Added support for levels with multiple obstacle types</li>
 							<li>Added a new ship type</li>
