--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -44,6 +44,7 @@
 							<li>Added heat seeking lasers</li>
 							<li>Reworked boost animation</li>
 							<li>Now uses vectors for accurate diagonal movement</li>
+							<li>New cython version for Intel based Macs</li>
 						</td>
 					</tr>
 					<tr>
