--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -34,18 +34,20 @@
 			<li><del>Lasers!</del></li>
 			<li><del>Original soundtrack</del></li>
 			<li><del>Intel based MacOS app version</del>Needs testing</li>
+			<li><del>Controller support</del>Currently xbox only for UI control</li>
 			<li>More level types and environments</li>
 			<li>Lots more unlockable ship types and skins</li>
 			<li>Optimization</li>
 			<li>Leaderboard</li>
 			<li>Code signing</li>
 			<li>Audio and visual overhaul</li>
-			<li>Controller support</li>
+			<li>Key rebinds</li>
 			<li>Rewrite and translate code</li>
 			<li>Steam Early Access</li>
 			<li>Playable online in web browser</li>
 			<li>MacOS App Store app</li>
 			<li>iOS and Android versions</li>
+			<li>Console version</li>
 		</div>
 		<p>Note: this is a slightly optimistic layout of my plans for the project. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
 	</div>
