--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -34,14 +34,14 @@
 			<li><del>Lasers!</del></li>
 			<li><del>Original soundtrack</del></li>
 			<li><del>Intel based MacOS app version</del>Needs testing</li>
-			<li><del>Controller support</del>Currently xbox only for UI control</li>
+			<li><del>Controller support</del></li>
 			<li>More level types and environments</li>
 			<li>Lots more unlockable ship types and skins</li>
-			<li>Optimization</li>
-			<li>Leaderboard</li>
+			<li>Performance and optimization improvements</li>
+			<li>Global leaderboard</li>
 			<li>Code signing</li>
 			<li>Audio and visual overhaul</li>
-			<li>Key rebinds</li>
+			<li>Settings menu</li>
 			<li>Rewrite and translate code</li>
 			<li>Steam Early Access</li>
 			<li>Playable online in web browser</li>
