--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -38,6 +38,7 @@
 						<td style="text-align: center;">v0.4.8</td>
 						<td>
 							<li>Added controller support</li>
+							<li>New mouse cursor input option</li>
 							<li>Added brakes and rotation in place</li>
 							<li>Added support for levels with multiple obstacle types</li>
 							<li>Added a new ship type</li>
