--- a/navigator/feedback.html
+++ b/navigator/feedback.html
@@ -13,7 +13,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="author" content="Mike Pistolesi">
-	<meta name="description" content="Support Navigator">
+	<meta name="description" content="Navigator Feedback">
 	<title>Support Navigator</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -24,17 +24,9 @@
 		crossorigin="anonymous"></script>
 </head>
 <body>
-	<div id = "support">
-		<h3>Support the Project!</h3>
-		<div id="supportBox">
-			<video width = "200" height = "200" style="border: 1px solid black;"controls autoplay loop muted>
-				<source src="supporterDemo.mp4" type="video/mp4">
-			</video>
-			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
-		</div>
-		<button id="roadmapButton" onclick="location.href='roadmap.html'">Roadmap</button>
-		<button id="donateButton" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
-		<button id="backButton" onclick="location.href='home.html'">Back</button>
+	<div id = "feedback">
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUc_bu8MgiTmUyxTcN1nsVrm1zNW51oc2bYe39NJlFcZdTtg/viewform?embedded=true" width="600" height="950" frameborder="3" marginheight="0" marginwidth="0">Loading…</iframe>
+		<button id="greyBackButton" style="padding:0; margin:0; width:100px; height:40px; font-size: 15px;" onclick="location.href='home.html'">Back</button>
 	</div>
 </body>
 </html>
