--- a/navigator/home.html
+++ b/navigator/home.html
@@ -36,14 +36,15 @@
 		</div>
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<div id = "homeButtons">
-			<button id="latestReleasesButton" onclick="location.href='downloads.html'">Latest Releases</button>
-			<button id="changesButton" onclick="location.href='changes.html'">Changes</button>
-			<button id="roadmapButton" onclick="location.href='roadmap.html'">Roadmap</button>
-			<button id="repositoryButton" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button id="contactButton" onclick="window.location.href='contact.html'">Contact</button>
-			<button id="donateButton" onclick="location.href='support.html'">Support the project</button>
+			<button id="homeButton" style= "background-color:#66347F;" onclick="location.href='downloads.html'">Latest Releases</button>
+			<button id="homeButton" style= "background-color:#05BFDB;" onclick="location.href='changes.html'">Changes</button>
+			<button id="homeButton" style= "background-color:#9E4784;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
+			<button id="homeButton" style= "background-color:#088395;" onclick="window.location.href='contact.html'">Contact</button>
+			<button id="homeButton" style= "background-color:#D27685;" onclick="window.location.href='feedback.html'">Feedback</button>
+			<button id="homeButton" style= "background-color:#00FFCA;" onclick="location.href='support.html'">Support the project</button>
 		</div>
 		<h3><strong>Created by Mike Pistolesi</strong></h2>
 	</div>
+
 </body>
 </html>
