--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -27,13 +27,12 @@
 	<h2>Roadmap</h2>
 	<div id="roadmap">
 		<div id="roadmapList">
-			<li><del>Windows executable version</del></li>
+			<li><del>Windows version</del></li>
 			<li><del>Save game records</del></li>
-			<li><del>MacOS app version for Apple Silicon</del></li>
-			<li><del>Linux executable Version</del></li>
+			<li><del>MacOS version</del></li>
+			<li><del>Linux version</del></li>
 			<li><del>Lasers!</del></li>
 			<li><del>Original soundtrack</del></li>
-			<li><del>Intel based MacOS app version</del>Needs testing</li>
 			<li><del>Controller support</del></li>
 			<li>More level types and environments</li>
 			<li>Lots more unlockable ship types and skins</li>
@@ -49,8 +48,8 @@
 			<li>iOS and Android versions</li>
 			<li>Console version</li>
 		</div>
-		<p>Note: this is a slightly optimistic layout of my plans for the project. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
+		<p>Note: this is a slightly optimistic layout of my plans for the project, in no particular order. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
 	</div>
-	<button id = "backButton" style = "z-index:2" onclick="location.href='home.html'">Back</button>
+	<button id = "backButton" style = "z-index:2" onclick="location.href='support.html'">Back</button>
 </body>
 </html>
