--- a/navigator/support.html
+++ b/navigator/support.html
@@ -28,7 +28,7 @@
 		<h3>Support the Project!</h3>
 		<div id="supportBox">
 			<video width = "200" height = "200" style="border: 1px solid black;"controls autoplay loop muted>
-				<source src="supporterDemo.mp4" type="video/mp4">
+				<source src="Assets/supporterDemo.mp4" type="video/mp4">
 			</video>
 			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
 		</div>
