--- a/navigator/contact.html
+++ b/navigator/contact.html
@@ -22,15 +22,20 @@
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
 <body>
-	<h2>Contact</h2>
-	<div id="socialButtons">
-		<button id="socialButton" onclick="window.open('https://www.instagram.com/playnavigator')">
-			<img id = "socialButtonImage" src="Assets/Instagram_Glyph_Gradient.png">
-		</button>
-		<button id="socialButton" onclick="window.location.href='mailto:playNavGame@gmail.com'">
-			<img id = "socialButtonImage" src="Assets/gmailLogo.png">
-		</button>
-	</div>
-	<button id = "backButton" style = "z-index:2" onclick="location.href='home.html'">Back</button>
+	<div id = "contact">
+		<h2>Contact</h2>
+		<div id="socialButtons">
+			<button id="socialButton" onclick="window.open('https://www.instagram.com/playnavigator')">
+				<img src="Assets/igIcon.png">
+			</button>
+			<button id="socialButton" onclick="window.open('https://twitter.com/playNavGame')">
+				<img src="Assets/twtIcon.png">
+			</button>
+			<button id="socialButton" onclick="window.location.href='mailto:playNavGame@gmail.com'">
+				<img src="Assets/gmIcon.png">
+			</button>
+		</div>
+		<button id = "backButton" style = "z-index:2;position:relative;" onclick="location.href='home.html'">Back</button>
+	
 </body>
 </html>
