--- a/navigator/feedback.html
+++ b/navigator/feedback.html
@@ -20,13 +20,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
-		crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id = "feedback">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUc_bu8MgiTmUyxTcN1nsVrm1zNW51oc2bYe39NJlFcZdTtg/viewform?embedded=true" width="600" height="950" frameborder="3" marginheight="0" marginwidth="0">Loading…</iframe>
-		<button id="greyBackButton" style="padding:0; margin:0; width:100px; height:40px; font-size: 15px;" onclick="location.href='home.html'">Back</button>
+		<button onclick="location.href='home.html'">Back</button>
 	</div>
 </body>
 </html>
