--- a/navigator/home.html
+++ b/navigator/home.html
@@ -20,10 +20,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
-		crossorigin="anonymous"></script>
 </head>
-
 <body>
 	<img id="bouncingIcon" src ="Assets/Ship.png"></div>
 	<script src="script.js"></script>
@@ -36,12 +33,12 @@
 		</div>
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<div id = "homeButtons">
-			<button id="homeButton" style= "background-color:#66347F;" onclick="location.href='downloads.html'">Latest Releases</button>
-			<button id="homeButton" style= "background-color:#05BFDB;" onclick="location.href='changes.html'">Changes</button>
-			<button id="homeButton" style= "background-color:#9E4784;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button id="homeButton" style= "background-color:#088395;" onclick="window.location.href='contact.html'">Contact</button>
-			<button id="homeButton" style= "background-color:#D27685;" onclick="window.location.href='feedback.html'">Feedback</button>
-			<button id="homeButton" style= "background-color:#00FFCA;" onclick="location.href='support.html'">Support the project</button>
+			<button id="homeButton" style= "background-color:#0bba1d;" onclick="location.href='downloads.html'">Latest Releases</button>
+			<button id="homeButton" style= "background-color:#7F00FF;" onclick="location.href='changes.html'">Changes</button>
+			<button id="homeButton" style= "background-color:#F11A0E;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
+			<button id="homeButton" style= "background-color:#1AE2E5;" onclick="window.location.href='contact.html'">Contact</button>
+			<button id="homeButton" style= "background-color:#F96E06;" onclick="window.location.href='feedback.html'">Feedback</button>
+			<button id="homeButton" style= "background-color:#1F0AF5;" onclick="location.href='support.html'">Support the project</button>
 		</div>
 		<h3><strong>Created by Mike Pistolesi</strong></h2>
 	</div>
