--- a/navigator/support.html
+++ b/navigator/support.html
@@ -20,8 +20,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1573995289499516"
-		crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id = "support">
@@ -32,8 +30,8 @@
 			</video>
 			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
 		</div>
-		<button id="roadmapButton" onclick="location.href='roadmap.html'">Roadmap</button>
-		<button id="donateButton" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
+		<button id="roadmapButton" style = "background-color: #c400ff" onclick="location.href='roadmap.html'"><del>Road</del> Spacemap</button>
+		<button id="donateButton" style = "background-color:#2b0df2;" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
 		<button id="backButton" onclick="location.href='home.html'">Back</button>
 	</div>
 </body>
