--- a/navigator/home.html
+++ b/navigator/home.html
@@ -2,6 +2,7 @@
 <!-- Navigator home page -->
 <html>
 <head>
+	<meta name="google-site-verification" content="PyJjp8Olnu1A9ZzVW3X49YOeLFP4HE99xRnXYVIVR78" />
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M4WSX0D7S"></script>
 	<script>
