--- a/navigator/downloads.html
+++ b/navigator/downloads.html
@@ -35,32 +35,42 @@
 			<tbody>
 				<tr>
 					<td>Windows</td>
-					<td>v0.4.7</td>
-					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.7/NavigatorWindows.zip">Download</a></td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorWindows.zip">Download</a></td>
 				</tr>
 				<tr>
-					<td>Windows (Cython)</td>
-					<td>v0.4.7</td>
-					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.7/NavigatorWindowsC.zip">Download</a></td>
+					<td>Windows C</td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorWindowsC.zip">Download</a></td>
 				</tr>
 				<tr>
 					<td>MacOS (Apple Silicon)</td>
-					<td>v0.4.7</td>
-					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.7/NavigatorMacOS.zip">Download</a></td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorMacOS.zip">Download</a></td>
+				</tr>
+				<tr>
+					<td>MacOS C (Apple Silicon)</td>
+					<td>---</td>
+					<td>Coming soon!</td>
 				</tr>
 				<tr>
 					<td>MacOS (Intel Based)</td>
-					<td>v0.4.7</td>
-					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.7/NavigatorMacOSIntel.zip">Download</a></td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorMacOSIntel.zip">Download</a></td>
+				</tr>
+				<tr>
+					<td>MacOS C (Intel Based)</td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorMacOSIntelC.zip">Download</a></td>
 				</tr>
 				<tr>
 					<td>Linux</td>
-					<td>v0.4.7</td>
-					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.7/NavigatorLinux.zip">Download</a></td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorLinux.zip">Download</a></td>
 				</tr>
 			</tbody>
 		</table>
-		<h4 style="margin-bottom:0px">To get started, download and extract the latest release above or run the game directly from the <a href="https://github.com/pstlo/Navigator/archive/refs/heads/main.zip">source code</a><h4>
+		<h4 style="margin-bottom:0px">To start navigating, download and extract the latest release above or run the game directly from the <a href="https://github.com/pstlo/Navigator/archive/refs/heads/main.zip">source code</a><h4>
 		<button id = "backButton" style = "z-index:2" onclick="location.href='home.html'">Back</button>
 	</div>
 </body>
