--- a/navigator/downloads.html
+++ b/navigator/downloads.html
@@ -50,8 +50,8 @@
 				</tr>
 				<tr>
 					<td>MacOS C (Apple Silicon)</td>
-					<td>---</td>
-					<td>Coming soon!</td>
+					<td>v0.4.8</td>
+					<td><a href="https://github.com/pstlo/Navigator/releases/download/v0.4.8/NavigatorMacOSC.zip">Download</a></td>
 				</tr>
 				<tr>
 					<td>MacOS (Intel Based)</td>
