--- a/navigator/home.html
+++ b/navigator/home.html
@@ -2,7 +2,6 @@
 <!-- Navigator home page -->
 <html>
 <head>
-	<meta name="google-site-verification" content="PyJjp8Olnu1A9ZzVW3X49YOeLFP4HE99xRnXYVIVR78" />
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M4WSX0D7S"></script>
 	<script>
@@ -34,14 +33,15 @@
 		</div>
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<div id = "homeButtons">
-			<button id="homeButton" style= "background-color:#0bba1d;" onclick="location.href='downloads.html'">Latest Releases</button>
-			<button id="homeButton" style= "background-color:#7F00FF;" onclick="location.href='changes.html'">Changes</button>
-			<button id="homeButton" style= "background-color:#F11A0E;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button id="homeButton" style= "background-color:#1AE2E5;" onclick="window.location.href='contact.html'">Contact</button>
-			<button id="homeButton" style= "background-color:#F96E06;" onclick="window.location.href='feedback.html'">Feedback</button>
-			<button id="homeButton" style= "background-color:#1F0AF5;" onclick="location.href='support.html'">Support the project</button>
+			<button style= "background-color:#0bba1d;" onclick="location.href='downloads.html'">Latest Releases</button>
+			<button style= "background-color:#7F00FF;" onclick="location.href='changes.html'">Changes</button>
+			<button style= "background-color:#F11A0E;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
+			<button style= "background-color:#1AE2E5;" onclick="window.location.href='contact.html'">Contact</button>
+			<button style= "background-color:#F96E06;" onclick="window.location.href='feedback.html'">Feedback</button>
+			<button style= "background-color:#1F0AF5;" onclick="location.href='support.html'">Support the project</button>
 		</div>
-		<h3><strong>Created by Mike Pistolesi</strong></h2>
+		<h3 style="margin-bottom: 0px; font-size:30px;"><span style="font-family: monospace;">&copy;</span>2023 Mike Pistolesi</h3>
+		<p style = "font-size:40%;">This page uses Google analytics</p>
 	</div>
 
 </body>
