--- a/navigator/downloads.html
+++ b/navigator/downloads.html
@@ -21,6 +21,17 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
+<style>
+	#downloads {
+		display: flex;
+		flex-direction: column;
+		line-height: 1;
+		text-align: center;
+		z-index:2;
+		align-items:center;
+		max-width:80%;
+	}
+</style>
 <body>
 	<div id="downloads">
 		<h2>Latest Releases</h2>
