--- a/navigator/feedback.html
+++ b/navigator/feedback.html
@@ -21,6 +21,25 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
+<style>
+	#feedback {
+		background-color:lightgrey;
+		display:flex;
+		flex-direction:column;
+		align-items:center;
+		margin-top:50px;
+		margin-bottom:50px;
+	}
+
+	#feedback button {
+		background-color:#98a69c;
+		padding:0;
+		margin:0;
+		width:100px;
+		height:40px;
+		font-size: 15px;
+	}
+</style>
 <body>
 	<div id = "feedback">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUc_bu8MgiTmUyxTcN1nsVrm1zNW51oc2bYe39NJlFcZdTtg/viewform?embedded=true" width="600" height="950" frameborder="3" marginheight="0" marginwidth="0">Loading…</iframe>
