--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -21,6 +21,38 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
+<style>
+	#roadmap {
+		text-align:center;
+		font-family: 'Press Start 2P', sans-serif;
+	}
+
+	#roadmapList {
+		padding-left: 20%;
+		padding-right:20%;
+		overflow-y:auto;
+	}
+
+	#roadmap li {
+		text-align:left;
+		font-family: 'Press Start 2P', sans-serif;
+		font-size: 15px;
+		margin-top: 50px;
+		color: white;
+		margin:10px;
+		max-width:auto;
+		padding-bottom: 3px;
+		padding-top: 3px;
+	}
+
+	#roadmap del {color: #07e821;}
+
+	#roadmap p {
+		font-size:70%;
+		padding-left:15%;
+		padding-right:15%;
+	}
+</style>
 <body>
 	<h2>Roadmap</h2>
 	<div id="roadmap">
