--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -21,6 +21,33 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
+<style>
+	#changes {
+	z-index:2;
+	height:800px;
+	display: flex;
+	flex-direction: column;
+	align-items:center;
+	text-align:center;
+	}
+
+	#changeLog {
+		height: 500px;
+		overflow-y: auto;
+		margin-bottom: 1%;
+		max-width: 200%;
+		position:relative;
+	}
+
+	#changeLog td {text-align:left;}
+
+	#changeLog::-webkit-scrollbar-thumb {
+	  background-color: #541df5;
+	  border-radius: 10px;
+	}
+
+	#changeLog::-webkit-scrollbar-thumb:hover {background-color: #7145f5;}
+</style>
 <body>
 	<h2>Change Log</h2>
 		<div id = "changeLog">
