--- a/navigator/support.html
+++ b/navigator/support.html
@@ -21,11 +21,32 @@
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
+<style>
+	#support {
+		display: flex;
+		flex-direction: column;
+		line-height: 1.5;
+		text-align: center;
+		z-index:2;
+		align-items:center;
+	}
+
+	#support p {padding-left: 10px;}
+
+	#supportBox {
+		display:flex;
+		flex-direction:row;
+		max-width:500px;
+		max-height:400px;
+		font-size:80%;
+		padding-bottom: 5%;
+	}
+</style>
 <body>
 	<div id = "support">
 		<h3>Support the Project!</h3>
 		<div id="supportBox">
-			<video width = "200" height = "200" style="border: 1px solid black;"controls autoplay loop muted>
+			<video width = "200" height = "200" controls autoplay loop muted>
 				<source src="Assets/supporterDemo.mp4" type="video/mp4">
 			</video>
 			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
