--- a/navigator/home.html
+++ b/navigator/home.html
@@ -16,6 +16,8 @@
 	<meta name="author" content="Mike Pistolesi">
 	<title>Navigator</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
@@ -89,7 +91,7 @@
 			<button id="socialButton" onclick="window.open('https://twitter.com/playNavGame')">
 				<img src="Assets/twtIcon.png">
 			</button>
-			<button id="socialButton" onclick="window.open('https://tiktok.com/playNav')">
+			<button id="socialButton" onclick="window.open('https://tiktok.com/@playNav')">
 				<img src="Assets/tokIcon.png">
 			</button>
 		</div>
