--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 		background-attachment:fixed;
 		justify-content:center;
 		text-align:center;
-		font-color:black;
-
+		font-size:200%;
 	}
 
 	#content {
@@ -38,7 +37,6 @@
 		padding:2px;
 		padding-left:15px;
 		padding-right:15px;
-		max-height:70px;
 		max-width:auto;
 	}
 
@@ -150,8 +148,6 @@
 		background-color: #11041f;
 		border-radius: 10px;
 	}
-
-
 </style>
 <body>
 	<div id="content">
